# project-x

./: .gitignore  AGENTS.md  README.md  README_zh.md  TODO.md  dev.sh
backend/: .env.example  README.md  main.py  pyproject.toml  setup.py
backend/src/: chat_runtime.py  chat_session.py  commons.py  conversation_store.py  logging_config.py  toolkits.py  utils.py  web_app.py  web_protocol.py  websocket_chat_session.py
backend/src/core/: agent.py  agent_base.py  agent_controller.py  agent_runner.py  agent_turn.py  chat.py  codex_client.py  init_prompts.py  memory_manager.py  memory_manager_run_logger.py  model_config.py  policies.py  prompts.py
backend/src/pkg/: __init__.py  token_counter.py
backend/src/prompts/: builder.py
backend/src/reminders/: __init__.py  runtime.py  schedule.py  (+2 more)
backend/tests/: conftest.py  test_agent_callbacks.py  test_agent_controller_pause_resume.py  test_agent_memory_manager_background_task.py  test_agent_turn_stream_litellm.py  test_apply_patch_tool.py  test_bash_tool.py  test_chat_runtime.py  test_chat_session.py  test_codex_client_retries.py  test_codex_integration_real_api.py  test_codex_sse_events.py  test_conversation_store.py  test_cwd_state_persistence.py  test_insert_text_tool.py  test_memory_manager.py  test_model_config_semantics.py  test_prompt_builder.py  test_read_file_tool.py  test_reminder_schedule.py  test_reminder_store.py  test_reminder_tool.py  test_replace_text_tool.py  test_resume_conversation.py  test_summaries_write_guard.py  test_token_counter.py  test_token_counter_integration.py  test_websocket_chat_session.py
(+132 files in other folders)
